add references to reduction techniques + knn standardization

--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -11,9 +11,9 @@ For example: given a set of emails, classify each email as spam or not spam.
 It is a supervised learning technique that is used to assign labels to data points based on their characteristics.
 Classification is an ideal technique for the required analysis as outlined in this report.\par
 
-K-Nearest Neighbour (k-NN) is a supervised machine learning algorithm that has been chosen as the primary method for this study.
+K-Nearest Neighbour (KNN) is a supervised machine learning algorithm that has been chosen as the primary method for this study.
 It is a simple yet powerful algorithm that classifies new cases based on similarity to existing data points.
-While k-NN can be used for both classification and regression problems, our focus is on classification due to the nature of the datasets used.\par
+While KNN can be used for both classification and regression problems, our focus is on classification due to the nature of the datasets used.\par
 
 This report details the analysis of two datasets: `hepatitis' and `mushroom'. These are two of many datasets provided to us as part of this assignment.
 We decided upon these two datasets due to the stark contrast between them in terms of complexity and size.
@@ -24,12 +24,12 @@ data points in the hepatitis and mushroom datasets with high accuracy'?.\par
 
 The specific objectives of this study are:
 \begin{enumerate}
-    \item To evaluate k-NN's classification performance on datasets of varying sizes and complexities
-    \item To determine optimal k-NN hyperparameter settings for each dataset
+    \item To evaluate KNN's classification performance on datasets of varying sizes and complexities
+    \item To determine optimal KNN hyperparameter settings for each dataset
     \item To assess the algorithm's robustness and limitations in different scenarios
 \end{enumerate}
 
-We hypothesize that k-NN will perform excellently on the mushroom dataset due to the simplicity of the data,
+We hypothesize that KNN will perform excellently on the mushroom dataset due to the simplicity of the data,
 but may struggle with the hepatitis dataset due to the complexity of the data in that dataset.
 
 % TODO: Discuss adding additional steps for SVM and reduction techniques
@@ -37,8 +37,8 @@ but may struggle with the hepatitis dataset due to the complexity of the data in
 The approach taken in this report involves the following steps:
 \begin{enumerate}
     \item Data Preprocessing: Both datasets are preprocessed, ensuring the data is clean and ready for analysis.
-    \item Model Training: Different combinations of hyperparameters are used to train the k-NN algorithm on the training dataset.
-    \item Model Evaluation: The performance of the best k-NN algorithm from the previous step is evaluated using the test dataset.
+    \item Model Training: Different combinations of hyperparameters are used to train the KNN algorithm on the training dataset.
+    \item Model Evaluation: The performance of the best KNN algorithm from the previous step is evaluated using the test dataset.
 \end{enumerate}
 
 \subsection{Report Structure}
