--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -1,12 +1,12 @@
-\subsubsection{k-Nearest Neighbors (kNN) Analysis}
+\subsubsection{k-Nearest Neighbors (KNN) Analysis}
 \label{subsubsec:discussion-knn}
 
-This section interprets the results of the kNN algorithm, discussing its performance and implications.
+This section interprets the results of the KNN algorithm, discussing its performance and implications.
 
-The kNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall and the f1 score.
+The KNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall and the f1 score.
 
 \subsubsection*{General Performance Analysis}
-As seen in Tables 1 and 2, the general performance of the k-NN algorithm was excellent across both datasets,
+As seen in Tables 1 and 2, the general performance of the KNN algorithm was excellent across both datasets,
 achieving accuracy scores above 92\% and F1 scores above 92.5\% on all top ten configurations.
 
 \subsubsection{Mushroom Dataset Performance}
@@ -74,7 +74,7 @@ indicating a good balance between precision and recall.
 \subsubsection{Overall Comparison}
 While both datasets achieved high performance, the hepatitis dataset outperformed the mushroom dataset in terms of accuracy and F1 score.
 This difference may be due to the hepatitis dataset's smaller size and more distinct class separations,
-making it easier for the k-NN algorithm to make accurate predictions. These distinct class separations may also explain why the k = 1 configuration
+making it easier for the KNN algorithm to make accurate predictions. These distinct class separations may also explain why the k = 1 configuration
 performed best on the hepatitis dataset, as the algorithm can make more precise decisions with fewer neighbors.
 
 
