--- a/work2/reports/04-results-and-analysis/04.2.4-discussion-summary.tex
+++ b/work2/reports/04-results-and-analysis/04.2.4-discussion-summary.tex
@@ -109,7 +109,7 @@ if their CD/2 intervals do not overlap, we can conclude that there is a statisti
 This visual representation provides an intuitive way to interpret the Nemenyi test results, as any
 non-overlapping bars clearly indicate significant differences between models.
 
-For the below analysis of both the k-NN and SVM models, values closer to 1 indicate no significant difference between models,
+For the below analysis of both the KNN and SVM models, values closer to 1 indicate no significant difference between models,
 whereas values closer to 0 indicate a significant difference.
 
 The diagonal values (top left to bottom right) are always 1 and report no significant difference
