--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -58,3 +58,53 @@
   year      = {2021},
   doi       = {10.1145/3459665}
 }
+
+
+@article{largeScalekNN,
+  author = {Song, Y. and Kong, X. and Zhang, C.},
+  title = {A large-scale k-nearest neighbor classification algorithm based on neighbor relationship preservation},
+  journal = {Wireless Communications and Mobile Computing},
+  year = {2022},
+  volume = {2022},
+  pages = {1-11},
+  doi = {10.1155/2022/7409171}
+}
+
+@article{StatisticalComparisonsOfClassifiersOverMultipleDataSetsJML,
+  title={Statistical Comparisons of Classifiers over Multiple Data Sets},
+  journal={Journal of Machine Learning Research},
+  author={Demsar, Janez},
+  year={2006},
+  volume={7},
+  pages={1--30}
+}
+
+
+
+@article{GCNN-JMLR,
+  author  = {Fu Chang and Chin-Chin Lin and Chi-Jen Lu},
+  title   = {Adaptive Prototype Learning Algorithms: Theoretical and Experimental Studies},
+  journal = {Journal of Machine Learning Research},
+  year    = {2006},
+  volume  = {7},
+  number  = {76},
+  pages   = {2125--2148},
+  url     = {http://jmlr.org/papers/v7/chang06a.html}
+}
+
+@InProceedings{ENNTH,
+  author="V{\'a}zquez, Fernando
+  and S{\'a}nchez, J. Salvador
+  and Pla, Filiberto",
+  editor="Marques, Jorge S.
+  and P{\'e}rez de la Blanca, Nicol{\'a}s
+  and Pina, Pedro",
+  title="A Stochastic Approach to Wilson's Editing Algorithm",
+  booktitle="Pattern Recognition and Image Analysis",
+  year="2005",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="35--42",
+  abstract="Two extensions of the original Wilson's editing method are introduced in this paper. These new algorithms are based on estimating probabilities from the k-nearest neighbor patterns of an instance, in order to obtain more compact edited sets while maintaining the classification rate. Several experiments with synthetic and real data sets are carried out to illustrate the behavior of the algorithms proposed here and compare their performance with that of other traditional techniques.",
+  isbn="978-3-540-32238-2"
+}
