--- a/work2/reports/03-methods/03.3-methods-reduction.tex
+++ b/work2/reports/03-methods/03.3-methods-reduction.tex
@@ -2,12 +2,12 @@
 \subsection{Instance Reduction Algorithms}
 \label{subsec:methods-reduction}
 
-A significant challenge in applying kNN to large datasets is the computational cost 
+A significant challenge in applying KNN to large datasets is the computational cost 
 associated with searching the entire training set. Additionally, noisy or irrelevant 
 data can negatively impact the model's performance. 
 To overcome these issues, we employ instance reduction techniques. 
 These techniques aim to identify and select a smaller, more representative subset of
-the training data, leading to faster prediction times and improved accuracy \cite{Wilson2000}.\\
+the training data, leading to faster prediction times and improved accuracy \cite{Wilson2000,largeScaleKNN}.\\
 
 A variety of rule-based techniques have been proposed in the literature to 
 address the challenges associated with large and noisy datasets. 
@@ -40,7 +40,7 @@ the corresponding class labels. GCNN can be described as follows:
     \item \textbf{Iteration:} For each instance $x_j \in X \setminus C$:
     \begin{itemize}
         \item Train a 1-NN classifier on $C$.
-        \item If $kNN(x_j) \neq y_j$, then add $x_j$ to $C$.
+        \item If $KNN(x_j) \neq y_j$, then add $x_j$ to $C$.
     \end{itemize}
     \item \textbf{Termination:} Repeat step 2 until no new instances are added to $C$.
 \end{enumerate}
@@ -55,7 +55,10 @@ in which instances are processed.
 Edited nearest neighbor rules, on the other hand, focus on removing noisy or outlier 
 instances from the training data. 
 
-The \textbf{Edited Nearest Neighbor Estimating Class Probabilistic and Threshold (ENNTh)} is a noise-removal technique that builds upon the Edited Nearest Neighbor (ENN) algorithm \cite{wilson2000reduction}. ENN aims to improve the generalization ability of KNN by removing instances that are likely to be noise or outliers. ENNTh refines this process by incorporating a threshold, $\tau$, to control the degree of noise removal. [CITE]
+The \textbf{Edited Nearest Neighbor Estimating Class Probabilistic and Threshold (ENNTh)} is a noise-removal
+technique that builds upon the Edited Nearest Neighbor (ENN) algorithm \cite{Wilson2000,ENNTH}.
+ENN aims to improve the generalization ability of KNN by removing instances that are likely to be noise or outliers.
+ENNTh refines this process by incorporating a threshold, $\tau$, to control the degree of noise removal \cite{ENNTH}.
 
 ENN traditionally removes an instance if its class label differs from the majority class among its $k$ nearest neighbors. ENNTh introduces a more flexible approach by estimating the class probability of an instance based on its $k$ nearest neighbors. Let $N_k(x_i)$ denote the set of $k$ nearest neighbors of $x_i$. The class probability of $x_i$ is estimated as:
 
@@ -65,7 +68,9 @@ P(y_i | x_i) = \frac{|\{x_j \in N_k(x_i) : y_j = y_i\}|}{k}
 
 An instance $x_i$ is removed only if $P(y_i | x_i) < \tau$. This thresholding mechanism allows for a more nuanced approach to noise removal, where instances with a higher probability of belonging to their assigned class are retained, even if they are not in the majority class among their neighbors.
 
-By adjusting the threshold $\tau$, ENNTh can control the trade-off between noise removal and the preservation of potentially useful instances. A higher threshold leads to more aggressive noise removal, while a lower threshold retains more instances. [CITE]
+By adjusting the threshold $\tau$, ENNTh can control the trade-off between noise removal and the preservation 
+of potentially useful instances. A higher threshold leads to more aggressive noise removal, while a lower threshold 
+retains more instances \cite{ENNTH}.
 
 
 % \subsubsection{Hybrid Reduction Techniques}
@@ -86,7 +91,9 @@ Then, it employs a decremental reduction procedure inspired by condensed nearest
 instances that do not affect the classification accuracy of their neighbors. This process results in a significantly 
 reduced dataset while aiming to preserve classification accuracy.
 
-DROP3 \cite{wilson2000reduction} is a hybrid instance reduction technique that combines the strengths of ENN and Condensed Nearest Neighbor (CNN). It aims to achieve a more substantial reduction in the dataset size while maintaining or improving classification accuracy.\\
+DROP3 \cite{wilson2000reduction} is a hybrid instance reduction technique that combines the strengths of ENN and 
+Condensed Nearest Neighbor (CNN). It aims to achieve a more substantial reduction in the dataset size while 
+maintaining or improving classification accuracy.\\
 
 DROP3 operates in two main stages:
 
@@ -137,10 +144,10 @@ accuracy, efficiency and storage. Furthermore, we extended our analysis to evalu
 on the performance of our optimized SVM classifier, provided insights into the effectiveness of instance reduction techniques across eager learning algorithms.
 
 % \subsubsection*{How we use these techniques}
-% After the first analysis of kNN to find the best parameter configuration for each of our datasets
-% (\textbf{i.e.}, mushroom \& hepatitis), we used the top ranked kNN model to run each of our selected 
+% After the first analysis of KNN to find the best parameter configuration for each of our datasets
+% (\textbf{i.e.}, mushroom \& hepatitis), we used the top ranked KNN model to run each of our selected 
 % instance reduction techniques as a preprocessing step to generate reduced versions of all our training data,
-% then we saved them to be able to use them to test our best kNN with no reduction (control) and using the reduced datasets.
+% then we saved them to be able to use them to test our best KNN with no reduction (control) and using the reduced datasets.
 % Additionally, we performed an evaluation of our best SVM algorithm to compare the effect of a reduced training set in this
 % eager learning algorithm.
 
