--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
@@ -75,9 +75,11 @@ at the 95\% confidence level. The full tables containing the p-values for each p
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{figures/interaction_effects_SVM_hepatitis.png}
-    \caption{Nemenyi Test Results for SVM on Mushroom Dataset}
+    \caption{Interaction Effects for SVM on Hepatitis Dataset}
     \label{fig:interaction_effects_SVM_hepatitis}
 \end{figure}
 
 To further analyze the hyperparameters we plotted the effects of each hyperparameter on the F1 score.
 
+Here we see that the Kernel Type is a stronger predictor of performance than the $C$ parameter, and that
+the best performing models tend to use the poly or linear kernals, and that higher values of $C$ tend to perform worse.
