--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -23,7 +23,7 @@
 \input{04-results-and-analysis/04-results-and-analysis}
 \input{05-conclusion}
 
-
 % TODO: Consider adding appendices if necessary
 \bibliography{references}
+\input{06-appendix}
 \end{document}
