--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -90,7 +90,7 @@ indicating a good balance between precision and recall.
     \label{fig:ranked_folds_KNN_hepatitis}
 \end{figure}
 
-The above figure shows the ranked folds for the k-NN algorithm on the mushroom dataset.
+The above figure shows the ranked folds for the k-NN algorithm on the hepatitis dataset.
 The figure illustrates the variation in performance across different KNN models, with some models outperforming others.
 Unlike the mushroom dataset, the hepatitis dataset shows variation in performance in each model per fold.
 A number of the models showed consistent mean performance but also contained some outliers that performed significantly better or worse
