--- a/work2/reports/tables/svm_results_hepatitis.tex
+++ b/work2/reports/tables/svm_results_hepatitis.tex
@@ -1,21 +1,21 @@
 \begin{table}
 \centering
-\caption{Results from SVM models for the hepatitis dataset}
+\caption{Results From Svm Models For The Hepatitis Dataset}
 \label{tab:svm_results_hepatitis}
-\begin{tabular}{rrlrr}
+\begin{tabular}{rrlrrr}
 \toprule
- & C & kernel type & accuracy & f1 \\
+ & C & kernel type & mean f1 & mean train time & mean test time \\
 \midrule
-1 & 7 & rbf & 0.955 & 0.972 \\
-2 & 3 & rbf & 0.948 & 0.968 \\
-3 & 5 & rbf & 0.948 & 0.968 \\
-4 & 1 & poly & 0.948 & 0.968 \\
-5 & 3 & poly & 0.948 & 0.967 \\
-6 & 5 & poly & 0.948 & 0.967 \\
-7 & 7 & poly & 0.948 & 0.967 \\
-8 & 1 & rbf & 0.903 & 0.941 \\
-9 & 3 & linear & 0.890 & 0.929 \\
-10 & 1 & linear & 0.884 & 0.927 \\
+1 & 7 & rbf & 0.975 & 0.001 & 0.000 \\
+2 & 5 & rbf & 0.971 & 0.001 & 0.000 \\
+3 & 3 & poly & 0.970 & 0.001 & 0.000 \\
+4 & 1 & poly & 0.970 & 0.001 & 0.000 \\
+5 & 3 & rbf & 0.969 & 0.001 & 0.000 \\
+6 & 5 & poly & 0.969 & 0.001 & 0.000 \\
+7 & 7 & poly & 0.969 & 0.001 & 0.000 \\
+8 & 1 & rbf & 0.942 & 0.001 & 0.000 \\
+9 & 3 & linear & 0.929 & 0.001 & 0.000 \\
+10 & 1 & linear & 0.927 & 0.001 & 0.000 \\
 \bottomrule
 \end{tabular}
 \end{table}
