--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -7,15 +7,15 @@
  & k & distance func & voting func & weighting func & mean f1 & mean train time & mean test time \\
 \midrule
 1 & 1 & ChebyshevDistance & ShepardsWorkVote & EqualWeighting & 0.973 & 0.000 & 0.007 \\
-2 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.973 & 0.000 & 0.007 \\
-3 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.973 & 0.000 & 0.007 \\
+2 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.973 & 0.000 & 0.007 \\
+3 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.973 & 0.000 & 0.007 \\
 4 & 5 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.969 & 0.000 & 0.009 \\
 5 & 7 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.969 & 0.000 & 0.009 \\
 6 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.969 & 0.000 & 0.007 \\
-7 & 1 & EuclideanDistance & MajorityClassVote & ReliefFWeighting & 0.969 & 0.000 & 0.009 \\
-8 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.969 & 0.000 & 0.007 \\
-9 & 1 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.969 & 0.000 & 0.009 \\
-10 & 1 & EuclideanDistance & InverseDistanceWeightedVote & ReliefFWeighting & 0.969 & 0.000 & 0.009 \\
+7 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.969 & 0.000 & 0.007 \\
+8 & 1 & EuclideanDistance & ShepardsWorkVote & ReliefFWeighting & 0.969 & 0.000 & 0.009 \\
+9 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.969 & 0.000 & 0.007 \\
+10 & 1 & EuclideanDistance & MajorityClassVote & EqualWeighting & 0.969 & 0.000 & 0.009 \\
 \bottomrule
 \end{tabular}
 \end{table}
