--- a/work2/reports/tables/svm_results_mushroom.tex
+++ b/work2/reports/tables/svm_results_mushroom.tex
@@ -1,21 +1,21 @@
 \begin{table}
 \centering
-\caption{Results from SVM models for the mushroom dataset}
+\caption{Results From Svm Models For The Mushroom Dataset}
 \label{tab:svm_results_mushroom}
-\begin{tabular}{rrlrr}
+\begin{tabular}{rrlrrr}
 \toprule
- & C & kernel type & accuracy & f1 \\
+ & C & kernel type & mean f1 & mean train time & mean test time \\
 \midrule
-1 & 1 & poly & 0.928 & 0.928 \\
-2 & 7 & rbf & 0.926 & 0.926 \\
-3 & 5 & rbf & 0.925 & 0.925 \\
-4 & 3 & rbf & 0.924 & 0.924 \\
-5 & 7 & poly & 0.920 & 0.920 \\
-6 & 5 & poly & 0.916 & 0.916 \\
-7 & 3 & poly & 0.916 & 0.915 \\
-8 & 3 & linear & 0.914 & 0.912 \\
-9 & 1 & linear & 0.911 & 0.910 \\
-10 & 1 & rbf & 0.906 & 0.902 \\
+1 & 3 & poly & 1.000 & 0.116 & 0.004 \\
+2 & 5 & poly & 1.000 & 0.115 & 0.003 \\
+3 & 7 & poly & 1.000 & 0.117 & 0.003 \\
+4 & 5 & rbf & 1.000 & 0.101 & 0.014 \\
+5 & 7 & rbf & 1.000 & 0.093 & 0.012 \\
+6 & 3 & rbf & 0.999 & 0.121 & 0.018 \\
+7 & 1 & poly & 0.999 & 0.129 & 0.008 \\
+8 & 1 & rbf & 0.989 & 0.178 & 0.030 \\
+9 & 7 & linear & 0.983 & 1.623 & 0.015 \\
+10 & 5 & linear & 0.983 & 1.185 & 0.013 \\
 \bottomrule
 \end{tabular}
 \end{table}
