--- a/work2/reports/tables/knn_results_mushroom.tex
+++ b/work2/reports/tables/knn_results_mushroom.tex
@@ -1,21 +1,21 @@
 \begin{table}
 \centering
-\caption{Results from KNN models for the mushroom dataset}
+\caption{Results From Knn Models For The Mushroom Dataset}
 \label{tab:knn_results_mushroom}
-\begin{tabular}{rrlllrr}
+\begin{tabular}{rrlllrrr}
 \toprule
- & k & distance func & voting func & weighting func & accuracy & f1 \\
+ & k & distance func & voting func & weighting func & mean f1 & mean train time & mean test time \\
 \midrule
-1 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
-2 & 5 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
-3 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
-4 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.950 & 0.951 \\
-5 & 1 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.950 & 0.951 \\
-6 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.950 & 0.951 \\
-7 & 5 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.933 & 0.933 \\
-8 & 7 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.930 & 0.929 \\
-9 & 3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.928 & 0.929 \\
-10 & 3 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.926 & 0.927 \\
+1 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 15.225 \\
+2 & 3 & EuclideanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 17.753 \\
+3 & 1 & EuclideanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 17.891 \\
+4 & 1 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 15.545 \\
+5 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 1.000 & 0.000 & 14.988 \\
+6 & 1 & EuclideanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 17.843 \\
+7 & 3 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 14.979 \\
+8 & 3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 15.154 \\
+9 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 1.000 & 0.000 & 15.163 \\
+10 & 3 & EuclideanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 18.055 \\
 \bottomrule
 \end{tabular}
 \end{table}
