--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -5,6 +5,7 @@
 \usepackage{array}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{longtable}
 \bibliographystyle{plain}
 
 % TODO: Consider adding a table of contents with \tableofcontents
