update methods for knn and svm

--- a/work2/reports/03-methods/03-methods.tex
+++ b/work2/reports/03-methods/03-methods.tex
@@ -1,7 +1,7 @@
 \section{Methods}
 \label{sec:methods}
 
-This section describes the methodology used in the study. It should include details about data collection, experimental design, and analytical techniques.
+This section details our experimental methodology, including algorithm implementations, parameter configurations, and statistical analysis approaches. We present our methods in four main parts:
 
 \input{03-methods/03.1-methods-knn}
 \input{03-methods/03.2-methods-svm}
