--- a/work2/reports/03-methods/03.2-methods-svm.tex
+++ b/work2/reports/03-methods/03.2-methods-svm.tex
@@ -18,23 +18,22 @@ The key principles of SVM include:
 
 Advantages of SVM include:
 \begin{itemize}
-    \item Effectiveness in high-dimensional spaces.
-    \item Versatility through different kernel functions.
-    \item Provides efficient predictions compared to instance-based methods like KNN.
+    \item Effectiveness in high-dimensional spaces
+    \item Versatility through different kernel functions
+    \item Memory efficiency compared to instance-based methods like KNN
 \end{itemize}
 
 Disadvantages of SVM include:
 \begin{itemize}
-    \item Performance highly depends on kernel selection and parameter tuning.
-    \item Becomes computationally intensive with large-scale datasets.
+    \item Performance highly depends on kernel selection and parameter tuning
+    \item Becomes computationally intensive with large-scale datasets
 \end{itemize}
 
 \subsubsection{Implementation Details}
 
-Unlike for KNN (see \autoref{subsec:methods-knn} on K-Nearest Neighbors), we did not implement the SVM algorithm ourselves.
-Instead, we used the prebuilt implementations from the \texttt{sklearn} library
-\footnote{Scikit-learn's \texttt{svm} module documentation can be found at \url{https://scikit-learn.org/1.5/modules/svm.html}}.
-Scikit-learn's \texttt{svm} module includes several different implementations of SVM:
+Unlike KNN (see \autoref{subsec:methods-knn}), we used scikit-learn's SVM implementation
+\footnote{Scikit-learn's \texttt{svm} module documentation: \url{https://scikit-learn.org/1.5/modules/svm.html}}.
+We specifically used \texttt{SVC} (Support Vector Classification) as it allows for non-linear classification through kernel functions.
 
 \begin{itemize}
     \item \texttt{SVC}: Support Vector Classification, the most commonly used implementation for classification tasks.
@@ -57,15 +56,16 @@ In our study, we explored multiple kernel functions to capture different types o
     \item Sigmoid: $K(x_i, x_j) = \tanh(\gamma x_i^T x_j + r)$
 \end{itemize}
 
-Where $x_i$ and $x_j$ are feature vectors, $\gamma$ is a kernel coefficient, $r$ is a constant term, and $d$ is the degree of the polynomial kernel.
+\paragraph{Regularization Parameter}
+The regularization parameter C controls the trade-off between achieving a low training error and a low testing error. We explored values [1, 3, 5, 7].
 
-\subsubsection{Hyperparameter Tuning}
-
-The following hyperparameters were tuned in our SVM implementation:
-
+\subsubsection{Performance Evaluation}
+Consistent with our KNN evaluation (see \autoref{subsec:methods-knn}), we assessed SVM performance using:
 \begin{itemize}
-    \item C: The regularization parameter, which controls the trade-off between achieving a low training error and a low testing error. We explored values [1, 3, 5, 7].
-    \item Kernel: We tested different kernel types including `linear', `poly', `rbf', and `sigmoid.
+    \item Accuracy and F1 Score
+    \item Confusion matrix metrics (TP, TN, FP, FN)
+    \item Training and testing times
+    \item 10-fold cross-validation
 \end{itemize}
 
 \subsubsection{Implementation Steps}
@@ -97,7 +97,7 @@ The performance of the SVM models was evaluated using the following metrics:
     \item Training Time: The time taken to train the model.
     \item Testing Time: The time taken to make predictions on the test set.
 \end{itemize}
+The F1 score was chosen as our primary metric for the same reasons discussed in the KNN section - it provides a balanced measure particularly suitable for imbalanced datasets like Hepatitis.
 
-The F1 score was used as our primary metric for evaluating the performance of the SVM models,
-since it balances the trade-off between precision and recall, and does not report overly favorable results when the dataset is imbalanced.
+Cross-validation folds were kept identical between KNN and SVM experiments to ensure fair comparison. For detailed preprocessing steps, refer to \autoref{sec:data}.
 
